Minor fix to bug for tabbing through overflowed links

--- a/src/scss/components/_see-more.scss
+++ b/src/scss/components/_see-more.scss
@@ -43,7 +43,6 @@
     pointer-events: none;
     position: absolute;
     z-index: -9999;
-    bottom: -100%;
     left: -100%;
 
     &:focus {
